--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,9 +2,16 @@
 
 <% @lists.each do |list| %>
 
-<p>タイトル</p>
-<span>
+ <p>タイトル</p>
+ <span>
     <%= link_to list.title, list_path(list.id) %>
-</span>
+ </span>
 
+ <P>画像</P>
+ <% if list.image.attached? %>
+  <%= image_tag list.image, size: "200x200" %>
+ <% else %>
+  <%= image_tag 'no_image', size: "200x200" %>
+ <% end %>
+ 
 <% end %>
